fixed the css  issue of not showing view

--- a/frontend/src/Components/App.css
+++ b/frontend/src/Components/App.css
@@ -217,7 +217,6 @@ select {
 .view_container {
   display: flex;
   flex-direction: column;
-  height: 20px;
   padding-bottom: 4px;
 }
 
